--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,10 @@ dependencies:
 
 dependency_overrides:
   # uncomment path for git/ local development
-  # enough_platform_widgets:
-  #   git:
-  #     url: https://github.com/Enough-Software/enough_platform_widgets.git
-  #   path: ../enough_platform_widgets
+   enough_platform_widgets:
+     git:
+       url: https://github.com/Enough-Software/enough_platform_widgets.git
+     #path: ../enough_platform_widgets
 
 dev_dependencies:
   flutter_test:
